--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.1",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "ember-cli-test-loader": "^1.1.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
