--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "~2.14.9",
     "ember-export-application-global": "^2.0.0",
@@ -36,7 +37,7 @@
     "ember-source": "~2.14.1",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3",
-    "ember-cli-test-loader": "^1.1.0"
+    "semantic-ui-ember": "^2.0.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
