--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.1",
+    "ember-truth-helpers": "^1.3.0",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3",
     "semantic-ui-ember": "^2.0.1"
