--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-data": "~2.14.9",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-power-select": "^1.9.6",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.1",
     "ember-truth-helpers": "^1.3.0",
