--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "bower": "^1.8.2"
+  }
 }
