--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ember-ajax": "^3.0.0",
     "ember-changeset": "^1.3.0",
     "ember-changeset-validations": "^1.2.8",
-    "ember-cli": "~2.14.2",
+    "ember-cli": "^2.18.2",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.3.0",
     "ember-cli-dependency-checker": "^1.3.0",
